# bazel-monorepo-test

./: .bazelrc  .gitignore  Cargo.toml  README.md  WORKSPACE.bazel
.cargo/: config.toml
adder_rust/: BUILD.bazel  Cargo.toml  README.md
adder_rust/src/: lib.rs
printer_rust/: BUILD.bazel  Cargo.toml  README.md
printer_rust/src/: lib.rs
proto/greeter/: README.md
proto/greeter/type/: BUILD.bazel  greeting.proto
proto/greeter/v1/: BUILD.bazel  greeter.proto
web_server_rust/: BUILD.bazel  Cargo.toml  README.md
web_server_rust/src/: main.rs
