[package]
name = "web_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "web-server-rust"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.20.3", features = ["full"] }
axum = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
printer_rust = { path = "../printer_rust" }
adder_rust = { path = "../adder_rust" }
