load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto:proto.bzl", "rust_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "greeter_v1_proto",
    srcs = [
        "greeter.proto",
    ],
    deps = [
        "//proto/greeter/type:greeter_type_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

rust_grpc_library(
    name = "greeter_v1_rust_grpc",
    deps = [
        ":greeter_v1_proto",
        "//proto/greeter/type:greeter_type_proto",
    ],
)
